<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan2"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/kullanicigiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kullan_c_giri_i"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/kullaniciadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kullanicigiris"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="in"
        android:drawablePadding="20dp"
        android:hint="@string/kullan_c_ad"
        android:padding="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kullaniciadi"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/ifre"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/girisbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sifre"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/g_r"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <CheckBox

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Şifreyi Göster/Gizle"
        android:textColor="@color/colorWhite"
        android:id="@+id/cbsifre"
        android:layout_below="@id/sifre"
        android:layout_margin="10dp"
        android:drawablePadding="20dp"/>


</RelativeLayout>